# ohos_device_soc_ingchips

./: BUILD.gn  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  README.en.md  README.md  ohos.build
sdk/: BUILD.gn
sdk/BSP/: board.c  bsp_usb.c  bsp_usb.h  eflash.c  eflash.h
sdk/FWlib/: peripheral_adc.c  peripheral_adc.h  peripheral_dma.c  peripheral_dma.h  peripheral_gpio.c  peripheral_gpio.h  peripheral_i2c.c  peripheral_i2c.h  peripheral_pinctrl.c  peripheral_pinctrl.h  peripheral_qdec.c  peripheral_qdec.h  peripheral_sysctrl.c  peripheral_sysctrl.h  peripheral_timer.c  peripheral_timer.h  peripheral_uart.c  peripheral_uart.h  peripheral_usb.c  peripheral_usb_backup.c  peripheral_usb_backup.h
sdk/StartUP/: __ingsoc.h
sdk/StartUP/ing916/: ingsoc.h
sdk/Tools/: btstack_helper.c
sdk/bundles/exp/ING9168xx/: platform.hex  platform_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/exp/ING9187xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/exp/ING9188xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/extension/ING9168xx/: platform.hex  platform_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/extension/ING9187xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/extension/ING9188xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/mass_conn/ING9168xx/: platform.hex  platform_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/mass_conn/ING9187xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/mass_conn/ING9188xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/mini/ING9168xx/: platform.hex  platform_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/mini/ING9187xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  symdefs.m  symdefs.s
sdk/bundles/mini/ING9188xx/: platform.hex  platform_entry.hex  platform_entry_lock.hex  symdefs.g  symdefs.i  (+2 more)
sdk/common/: common.c  common.h  soc.h  startup_ARMCM4.s
sdk/hals/update/: BUILD.gn  hal_hota_board.c
(+144 files in other folders)
